plugins {
    id "java"
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

repositories {
    jcenter()
}

ext["postgreSqlVersion"] = "42.3.1"
ext["junitVersion"] = "5.8.2"
ext["mockitoVersion"] = "4.2.0"
ext["jacksonVersion"] = "2.13.1"
ext["log4j2Version"] = "2.17.0"

dependencies {
    implementation ("org.apache.logging.log4j:log4j-api:$log4j2Version")
    implementation ("org.postgresql:postgresql:$postgreSqlVersion")
    implementation ("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")

    runtimeOnly ("org.apache.logging.log4j:log4j-core:$log4j2Version")
    runtimeOnly ("org.apache.logging.log4j:log4j-slf4j-impl:$log4j2Version")

    testImplementation ("org.junit.jupiter:junit-jupiter:$junitVersion")
    testImplementation ("org.mockito:mockito-core:$mockitoVersion")
    testImplementation ("org.mockito:mockito-junit-jupiter:$mockitoVersion")
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
    options.fork = true
    options.deprecation = true
    options.compilerArgs += ["-Xlint:all"]
}

tasks.withType(Test) {
    //jvmArgs += ["--enable-preview"]
}

